
1.46

* deprecate DEBUG method, it's still there but produce warning
* fix CleanSlate method that was missing several keys
* fix a long standing bug we had, we didn't write depends_on data about
  a join, so we could build queries with incorrect parens around join
  conditions
* fix default values for ALIAS1 argument in the Join method, istead of
  defaulting FIELD1 to 'main' value
* internal refactoring of a storage for query's conditions,
  instead of building query strings right after the limit
  or join, we now build a perl structure
* don't clone attributes that don't exists in the Clone method
* we use Encode module without perl version check for a long time, so
  we can get rid of all checks for the version and load the module
  at compile time everywhere we need it
* implement MayBeNull method in the handler that checks if applied
  conditions allow NULLs in the result set
* implement cascaded LEFT JOINs optimization
* additional tests for CleanSlate and Clone methods, ENTRY_AGGREGATOR
  argument, different types of joins and LEFT JOIN optimizer

1.45 Tue Sep 26 11:08:20 EDT 2006

* Postgres fixes:
** fix "$rec->Create();"
** fix "$rec->Create( IntegerColumn => '' );"
** fix "$rec->SetIntegerColumn( '' );"
** add test

* Cache changes
** cleanup ::Record::Cachable
** use cache in:
    $a->LoadByCols(...);
    $b->LoadById( $a->id );
** add cache tests

1.44
* DBIx::SearchBuilder::Handle::DatabaseVersion enhancements

1.43 Wed Apr 12 13:59:58 EDT 2006
* Fix to the sequence compatibility fixes. For backwards compatibility.

1.42 Mon Apr 10 11:27:39 EDT 2006
* Signatures fixed

1.41 Mon Apr 10 11:26:19 EDT 2006
* PG 8.1 sequence compatibility fixes from Daniel Tabuenca

1.40 not released yet
* 'NOT STARTSWITH' and 'NOT ENDSWITH'

1.39 Thu Feb 16 16:27:42 PST 2006
* Allow ORs on left joins


1.38 Thu Dec 29 03:17:54 EST 2005
* Released 1.37 dev series

1.37_01 Thu Dec  8 15:56:50 EST 2005
* Switched Postgres sequence lookups to use CURRVAL, rather than OIDs
